--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ticalc.link",
+  "name": "ticalc.link/24rousol",
   "description": "Send files to your calculator from the browser",
   "scripts": {
     "start": "webpack-dev-server",
